--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="nav.css">
 </head>
+
 <body>
     <div class="box">
         <div class="nav">
-            <div class="logo"><img src="https://themewagon.github.io/klassy-cafe/assets/images/klassy-logo.png" alt=""></div>
+            <div class="logo"><img src="https://themewagon.github.io/klassy-cafe/assets/images/klassy-logo.png" alt="">
+            </div>
             <div class="menubar"><i class="fa-solid fa-bars" style="color: #030408;"></i></div>
             <div class="list">
                 <a href="">Home</a>
@@ -43,68 +46,94 @@
                 </div>
             </div>
             <div class="right"></div>
-        </header> 
+        </header>
         <main>
             <div class="about" id="a">
                 <div class="aboutLeft h6">
-                    <div class="heading"> 
+                    <div class="heading">
                         <h6><span>------</span>ABOUT US</h6>
-                        <h2>We Leave A Delicious Memory For You</h2> 
+                        <h2>We Leave A Delicious Memory For You</h2>
                     </div>
                     <div class="para">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae voluptatum officia, reprehenderit possimus modi dolorum hic ullam ratione, recusandae atque consequuntur unde quo facere exercitationem sint, deleniti tenetur eius repellendus.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. At rem, fuga iure voluptatem, libero illo quae corporis error commodi inventore consequuntur ea eius labore et ex impedit optio delectus fugiat.
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae voluptatum officia,
+                            reprehenderit possimus modi dolorum hic ullam ratione, recusandae atque consequuntur unde
+                            quo facere exercitationem sint, deleniti tenetur eius repellendus.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. At rem, fuga iure voluptatem,
+                            libero illo quae corporis error commodi inventore consequuntur ea eius labore et ex impedit
+                            optio delectus fugiat.
                         </p>
                     </div>
                     <div class="aboutImages">
-                        <div class="img1"><img src="https://themewagon.github.io/klassy-cafe/assets/images/about-thumb-01.jpg" alt=""></div>
-                        <div class="img1"><img src="https://themewagon.github.io/klassy-cafe/assets/images/about-thumb-01.jpg" alt=""></div>
-                        <div class="img1"><img src="https://themewagon.github.io/klassy-cafe/assets/images/about-thumb-01.jpg" alt=""></div>
+                        <div class="img1"><img
+                                src="https://themewagon.github.io/klassy-cafe/assets/images/about-thumb-01.jpg" alt="">
+                        </div>
+                        <div class="img1"><img
+                                src="https://themewagon.github.io/klassy-cafe/assets/images/about-thumb-01.jpg" alt="">
+                        </div>
+                        <div class="img1"><img
+                                src="https://themewagon.github.io/klassy-cafe/assets/images/about-thumb-01.jpg" alt="">
+                        </div>
                     </div>
                 </div>
-                <div class="aboutRight"><img src="https://themewagon.github.io/klassy-cafe/assets/images/about-video-bg.jpg" alt=""></div>
+                <div class="aboutRight"><img
+                        src="https://themewagon.github.io/klassy-cafe/assets/images/about-video-bg.jpg" alt=""></div>
             </div>
             <div class="menu h6" id="m">
-                <div class="heading"> 
+                <div class="heading">
                     <h6><span>------</span>OUR MENU</h6>
-                    <h2>Our selection of cakes with quality of taste</h2> 
+                    <h2>Our selection of cakes with quality of taste</h2>
                 </div>
                 <div class="card">
                     <div class="card1 crd">
-                        <div class="cost"><h1>$22</h1></div>
+                        <div class="cost">
+                            <h1>$22</h1>
+                        </div>
                         <div class="incard">
                             <h3>chocolate cake</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis quibusdam fugiat cupiditate, at </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis
+                                quibusdam fugiat cupiditate, at </p>
                         </div>
                     </div>
                     <div class="card2 crd">
-                        <div class="cost"><h1>$22</h1></div>
+                        <div class="cost">
+                            <h1>$22</h1>
+                        </div>
                         <div class="incard">
                             <h3>chocolate cake</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis quibusdam fugiat cupiditate, at </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis
+                                quibusdam fugiat cupiditate, at </p>
                         </div>
                     </div>
                     <div class="card3 crd">
-                        <div class="cost"><h1>$22</h1></div>
+                        <div class="cost">
+                            <h1>$22</h1>
+                        </div>
                         <div class="incard">
                             <h3>chocolate cake</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis quibusdam fugiat cupiditate, at </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis
+                                quibusdam fugiat cupiditate, at </p>
                         </div>
                     </div>
                     <div class="card4 crd">
-                        <div class="cost"><h1>$22</h1></div>
+                        <div class="cost">
+                            <h1>$22</h1>
+                        </div>
                         <div class="incard">
                             <h3>chocolate cake</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis quibusdam fugiat cupiditate, at </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis
+                                quibusdam fugiat cupiditate, at </p>
                         </div>
                     </div>
-                    <div class="card5 crd">
-                        <div class="cost"><h1>$22</h1></div>
+                    <!-- <div class="card5 crd">
+                        <div class="cost">
+                            <h1>$22</h1>
+                        </div>
                         <div class="incard">
                             <h3>chocolate cake</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis quibusdam fugiat cupiditate, at </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quia quisquam quis
+                                quibusdam fugiat cupiditate, at </p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="card6">
                         <div class="cost"><h1>$22</h1></div>
                         <div class="incard">
@@ -115,9 +144,9 @@
                 </div>
             </div>
             <div class="chefs h6" id="ch">
-                <div class="heading"> 
+                <div class="heading">
                     <h6>OUR CHEFS</h6>
-                    <h2 id="h2">We offer the best ingredients for You</h2> 
+                    <h2 id="h2">We offer the best ingredients for You</h2>
                 </div>
                 <div class="chefsbox">
                     <div class="chefsCard">
@@ -169,10 +198,11 @@
             </div>
             <div class="contact h6" id="co">
                 <div class="contactLeft">
-                    <div class="heading"> 
+                    <div class="heading">
                         <h6><span>------</span>CONTACT US</h6>
-                        <h2>Here You Can Make A Reservation Or Just walkin to our cafe</h2> 
-                        <p>Donec pretium est orci, non vulputate arcu hendrerit a. Fusce a eleifend riqsie, namei sollicitudin urna diam, sed commodo purus porta ut.</p>
+                        <h2>Here You Can Make A Reservation Or Just walkin to our cafe</h2>
+                        <p>Donec pretium est orci, non vulputate arcu hendrerit a. Fusce a eleifend riqsie, namei
+                            sollicitudin urna diam, sed commodo purus porta ut.</p>
                     </div>
                     <div class="details">
                         <div class="phone">
@@ -204,7 +234,7 @@
                         <fieldset><input type="text" placeholder="Your phone number"></fieldset>
                         <fieldset><input type="date" placeholder="dd/mm/yyyy"></fieldset>
                         <fieldset><input type="text" placeholder="Your email address"></fieldset>
-                        
+
                         <fieldset>
                             <select name="" id="">
                                 <option value="">Your number of guest</option>
@@ -226,7 +256,7 @@
                                 <option value="">Dinner</option>
                             </select>
                         </fieldset>
-                        
+
                     </div>
                     <div class="msg">
                         <textarea name="" id="" cols="30" rows="10" placeholder="Messege"></textarea>
@@ -234,10 +264,10 @@
                     <fieldset class="button"><button>Make A Reservation</button></fieldset>
                 </div>
             </div>
-            <div class="klassyWeek h6" >
-                <div class="heading"> 
+            <div class="klassyWeek h6">
+                <div class="heading">
                     <h6>KLASSY WEEK</h6>
-                    <h2 id="h2">This Week’s Special Meal Offers</h2> 
+                    <h2 id="h2">This Week’s Special Meal Offers</h2>
                     <ul class="klassyList">
                         <li><i class="fa-regular fa-mug-saucer" style="color: rgb(255, 119, 0);"></i></li>
                         <li><i class="fa-solid fa-utensils" style="color: rgb(255, 119, 0);"></i></li>
@@ -246,54 +276,72 @@
                 </div>
                 <div class="parent">
                     <div class="last">
-                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt=""></div>
+                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt="">
+                        </div>
                         <div>
                             <h2>Fresh Chicken Salad</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur koit adipiscing elit, sed do.</p>
                         </div>
-                        <div><h2>$20</h2></div>
+                        <div>
+                            <h2>$20</h2>
+                        </div>
                     </div>
                     <div class="last">
-                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt=""></div>
+                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt="">
+                        </div>
                         <div>
                             <h2>Fresh Chicken Salad</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur koit adipiscing elit, sed do.</p>
                         </div>
-                        <div><h2>$6.5</h2></div>
+                        <div>
+                            <h2>$6.5</h2>
+                        </div>
                     </div>
                     <div class="last">
-                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt=""></div>
+                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt="">
+                        </div>
                         <div>
                             <h2>Fresh Chicken Salad</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur koit adipiscing elit, sed do.</p>
                         </div>
-                        <div><h2>$45</h2></div>
+                        <div>
+                            <h2>$45</h2>
+                        </div>
                     </div>
                     <div class="last">
-                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt=""></div>
+                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt="">
+                        </div>
                         <div>
                             <h2>Fresh Chicken Salad</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur koit adipiscing elit, sed do.</p>
                         </div>
-                        <div><h2>$15</h2></div>
+                        <div>
+                            <h2>$15</h2>
+                        </div>
                     </div>
                     <div class="last">
-                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt=""></div>
+                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt="">
+                        </div>
                         <div>
                             <h2>Fresh Chicken Salad</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur koit adipiscing elit, sed do.</p>
                         </div>
-                        <div><h2>$23</h2></div>
+                        <div>
+                            <h2>$23</h2>
+                        </div>
                     </div>
                     <div class="last">
-                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt=""></div>
+                        <div><img src="https://themewagon.github.io/klassy-cafe/assets/images/tab-item-01.png" alt="">
+                        </div>
                         <div>
                             <h2>Fresh Chicken Salad</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur koit adipiscing elit, sed do.</p>
                         </div>
-                        <div><h2>$44</h2></div>
+                        <div>
+                            <h2>$44</h2>
+                        </div>
                     </div>
-                </div>    
+                </div>
             </div>
         </main>
         <footer>
@@ -305,7 +353,8 @@
                     <li><i class="fa-brands fa-facebook-f" style="color: rgb(255, 119, 0)"></i></li>
                 </ul>
             </div>
-            <div class="div"><img src="https://themewagon.github.io/klassy-cafe/assets/images/white-logo.png" alt=""></div>
+            <div class="div"><img src="https://themewagon.github.io/klassy-cafe/assets/images/white-logo.png" alt="">
+            </div>
             <div class="div">
                 <p>Copy Right klassy cafe co.</p>
                 <p>Designe:TemplateMo</p>
@@ -313,4 +362,5 @@
         </footer>
     </div>
 </body>
+
 </html>
